--- a/github/workflow/cicd.yml
+++ b/github/workflow/cicd.yml
@@ -1,1 +1,31 @@
+name: Deploy frontend application
 
+on:
+  push:
+    branches:
+      -main
+
+jobs:
+  build:
+    runs-on: ubuntu-latest
+    steps:
+      - name: Checkout Source
+        uses: actions/checkout@v4
+      - name: login to docker hub
+        run: docker login -u ${{ secrets.DOCKER-USERNAME }} -P ${{ secrets.DOCKER-PASSWORD }}
+      - name: build docker image
+        run: docker build -t nageshwer/ec2.gha.frontend --build-arg REACT_APP_NODE_ENV='production' --build-arg REACT_APP_SERVER_BASE_URL='${{ secrets.REACT_APP_SERVER_BASE_URL}}' .
+      - name: deploy docker  image  to docker hub
+        run: docker push nageshwer/ec2.gha.frontend:latest
+
+
+  deploy:
+    needs: build
+    runs-on: self-hosted
+    steps:
+      - name: Pull image  from docker hub
+        run: docker pull nageshwer/ec2.gha.frontend:latest
+      - name: Delete old container
+        run: docker rm -f frontend-C
+      - name: run docker container
+        run: docker run -d -p 3000:80 --name frontend-C nageshwer/ec2.gha.frontend:latest 
